More test fixing.